İkinci versiyon. Testler eklendi.

--- a/src/uav_tests_cpp/CMakeLists.txt
+++ b/src/uav_tests_cpp/CMakeLists.txt
@@ -4,25 +4,45 @@ project(uav_tests_cpp)
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_gtest REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(geometry_msgs REQUIRED)
 find_package(mavros_msgs REQUIRED)
-find_package(uav_control_cpp REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(uav_control_cpp REQUIRED)  # ADAY KODU
 
-ament_add_gtest(test_mavros_e2e tests/test_mavros_e2e.cpp)
+include_directories(include)
 
-# Link bağımlılıkları
-ament_target_dependencies(test_mavros_e2e
-  rclcpp geometry_msgs mavros_msgs uav_control_cpp
+# ---- TEST BINARIES ----
+ament_add_gtest(test_task1_arm_disarm
+  test/test_task1_arm_disarm.cpp
+)
+ament_target_dependencies(test_task1_arm_disarm
+  rclcpp mavros_msgs geometry_msgs uav_control_cpp
 )
 
-# Bu gtest'i otomatik koşturma, sadece binary üret
-set_tests_properties(test_mavros_e2e PROPERTIES DISABLED TRUE)
+ament_add_gtest(test_task2_takeoff_land
+  test/test_task2_takeoff_land.cpp
+)
 
-# REPO_ROOT = repo kökü (paket kaynak dizininden iki yukarı: src/<pkg>/ -> repo root)
+set_tests_properties(test_task1_arm_disarm PROPERTIES DISABLED TRUE)
+set_tests_properties(test_task2_takeoff_land PROPERTIES DISABLED TRUE)
+
+ament_target_dependencies(test_task2_takeoff_land
+  rclcpp mavros_msgs geometry_msgs uav_control_cpp
+)
+
+# ---- E2E KOŞU (SITL + MAVROS + GTEST) ----
+# repo kökü = paket kaynak dizininden iki yukarı
+set(REPO_ROOT_PATH "${CMAKE_SOURCE_DIR}/../..")
+
 add_test(
-  NAME e2e_with_stack
+  NAME task1_arm_disarm
   COMMAND /usr/bin/bash -lc
-  "REPO_ROOT=${CMAKE_SOURCE_DIR}/../.. ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_e2e.sh $<TARGET_FILE:test_mavros_e2e>"
+  "REPO_ROOT=${REPO_ROOT_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_e2e.sh $<TARGET_FILE:test_task1_arm_disarm>"
+)
+
+add_test(
+  NAME task2_takeoff_land
+  COMMAND /usr/bin/bash -lc
+  "REPO_ROOT=${REPO_ROOT_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_e2e.sh $<TARGET_FILE:test_task2_takeoff_land>"
 )
 
 install(PROGRAMS tests/run_e2e.sh DESTINATION lib/${PROJECT_NAME})
