--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,9 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: 🔧 Make scripts executable
-        run: chmod +x run_sitl.sh run_mavros.sh
+        run: |
+          chmod +x run_sitl.sh run_mavros.sh
+          chmod +x src/uav_tests_cpp/tests/run_e2e.sh
 
       # ------------------ MAVROS smoke ------------------
       - name: 🧪 MAVROS smoke
@@ -53,7 +55,6 @@ jobs:
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
             set -eo pipefail
             mkdir -p /ws/.ci_artifacts
-
             test -d /opt/ros/humble || { echo "[ERR] ROS not found"; exit 1; }
             test -d /opt/PX4-Autopilot || { echo "[ERR] PX4 not found"; exit 1; }
 
@@ -65,9 +66,7 @@ jobs:
             for i in $(seq 1 40); do
               source /opt/ros/humble/setup.bash
               if ros2 topic list 2>/dev/null | grep -q "/mavros/state"; then
-                echo "[OK] MAVROS up"
-                ok=1
-                break
+                echo "[OK] MAVROS up"; ok=1; break
               fi
               sleep 0.5
             done
@@ -88,7 +87,7 @@ jobs:
             colcon build --symlink-install --packages-up-to uav_tests_cpp
           '
 
-      - name: ▶️ Test (ctest via colcon)
+      - name: ▶️ Test (ctest via colcon, only E2E)
         id: ctest
         continue-on-error: true
         shell: bash
@@ -97,8 +96,9 @@ jobs:
             set -eo pipefail
             source /opt/ros/humble/setup.bash
             source install/setup.bash
-            colcon test --packages-select uav_tests_cpp --ctest-args -VV || true
+            colcon test --packages-select uav_tests_cpp --ctest-args -R "task(1|2)_" -VV || true
             colcon test-result --verbose || true
+
             # logları topla
             mkdir -p .ci_artifacts
             [ -f /tmp/sitl_e2e.log ]   && cp /tmp/sitl_e2e.log   .ci_artifacts/sitl_e2e.log   || true
@@ -115,7 +115,7 @@ jobs:
 
       # ---- GHCR Publish (Packages) ----
       - name: 🔐 Login to GHCR
-        if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' && github.repository_owner == github.actor }}
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -124,7 +124,7 @@ jobs:
 
       - name: 📦 Publish image to GHCR (Packages)
         id: publish
-        if: ${{ github.ref == 'refs/heads/main' && github.event_name != 'pull_request' && steps.ctest.outcome == 'success' }}
+        if: ${{ github.ref == 'refs/heads/main' && github.event_name != 'pull_request' && github.repository_owner == github.actor && steps.ctest.outcome == 'success' }}
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -145,7 +145,7 @@ jobs:
             echo "## 🛩️ UAV Assessment (C++)"
             echo
             echo "- MAVROS smoke: **${{ steps.mavros.outcome }}**"
-            echo "- C++ tests:   **${{ steps.ctest.outcome }}**"
+            echo "- C++ E2E tests: **${{ steps.ctest.outcome }}**"
             echo
             echo "<details><summary>🧾 MAVROS log (tail)</summary>"
             echo
