--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,20 +46,18 @@ jobs:
           chmod +x run_sitl.sh run_mavros.sh
           chmod +x src/uav_tests_cpp/tests/run_e2e.sh
 
-      # ------------------ MAVROS smoke ------------------
+      # ---------------- MAVROS Smoke ----------------
       - name: 🧪 MAVROS smoke
-        id: mavros
-        continue-on-error: true
+        id: mavros_smoke
         shell: bash
         run: |
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
             set -eo pipefail
             mkdir -p /ws/.ci_artifacts
-            test -d /opt/ros/humble || { echo "[ERR] ROS not found"; exit 1; }
-            test -d /opt/PX4-Autopilot || { echo "[ERR] PX4 not found"; exit 1; }
-
             source /opt/ros/humble/setup.bash
-            ./run_sitl.sh || true
+
+            ./run_sitl.sh &
+            sleep 5
             nohup ./run_mavros.sh 14557 > /tmp/mavros.log 2>&1 &
 
             ok=0
@@ -71,14 +69,16 @@ jobs:
               sleep 0.5
             done
 
-            cp /tmp/sitl.log   /ws/.ci_artifacts/mavros_sitl.log  2>/dev/null || true
-            cp /tmp/mavros.log /ws/.ci_artifacts/mavros.log       2>/dev/null || true
+            # logs -> host
+            [ -f /tmp/sitl.log ]  && cp /tmp/sitl.log  .ci_artifacts/smoke_sitl.log  || true
+            [ -f /tmp/mavros.log ]&& cp /tmp/mavros.log .ci_artifacts/smoke_mavros.log|| true
 
             test "$ok" -eq 1
           '
 
-      # ------------------ C++ BUILD & TEST ------------------
+      # ---------------- C++ Build ----------------
       - name: 🧱 Build (colcon)
+        id: build_cpp
         shell: bash
         run: |
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
@@ -87,23 +87,36 @@ jobs:
             colcon build --symlink-install --packages-up-to uav_tests_cpp
           '
 
-      - name: ▶️ Test (ctest via colcon, only E2E)
-        id: ctest
-        continue-on-error: true
+      # ---------------- Task1 Test ----------------
+      - name: ▶️ Task 1 – Arm/Disarm
+        id: task1
         shell: bash
         run: |
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
             set -eo pipefail
             source /opt/ros/humble/setup.bash
             source install/setup.bash
-            colcon test --packages-select uav_tests_cpp --ctest-args -R "task(1|2)_" -VV || true
-            colcon test-result --verbose || true
-
-            # logları topla
+            colcon test --packages-select uav_tests_cpp --ctest-args -R "^task1_arm_disarm$" -VV
+            colcon test-result --all --verbose
             mkdir -p .ci_artifacts
-            [ -f /tmp/sitl_e2e.log ]   && cp /tmp/sitl_e2e.log   .ci_artifacts/sitl_e2e.log   || true
-            [ -f /tmp/mavros_e2e.log ] && cp /tmp/mavros_e2e.log .ci_artifacts/mavros_e2e.log || true
-            cp -r build/uav_tests_cpp/test_results .ci_artifacts/test_results 2>/dev/null || true
+            [ -f /tmp/sitl_e2e.log ]   && cp /tmp/sitl_e2e.log   .ci_artifacts/task1_sitl.log   || true
+            [ -f /tmp/mavros_e2e.log ] && cp /tmp/mavros_e2e.log .ci_artifacts/task1_mavros.log || true
+          '
+
+      # ---------------- Task2 Test ----------------
+      - name: ▶️ Task 2 – Takeoff/Land
+        id: task2
+        shell: bash
+        run: |
+          docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
+            set -eo pipefail
+            source /opt/ros/humble/setup.bash
+            source install/setup.bash
+            colcon test --packages-select uav_tests_cpp --ctest-args -R "^task2_takeoff_land$" -VV
+            colcon test-result --all --verbose
+            mkdir -p .ci_artifacts
+            [ -f /tmp/sitl_e2e.log ]   && cp /tmp/sitl_e2e.log   .ci_artifacts/task2_sitl.log   || true
+            [ -f /tmp/mavros_e2e.log ] && cp /tmp/mavros_e2e.log .ci_artifacts/task2_mavros.log || true
           '
 
       - name: 📎 Upload artifacts
@@ -113,7 +126,7 @@ jobs:
           name: ci-artifacts
           path: .ci_artifacts
 
-      # ---- GHCR Publish (Packages) ----
+      # ---- GHCR Publish ----
       - name: 🔐 Login to GHCR
         if: ${{ github.event_name != 'pull_request' && github.repository_owner == github.actor }}
         uses: docker/login-action@v3
@@ -122,9 +135,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 📦 Publish image to GHCR (Packages)
-        id: publish
-        if: ${{ github.ref == 'refs/heads/main' && github.event_name != 'pull_request' && github.repository_owner == github.actor && steps.ctest.outcome == 'success' }}
+      - name: 📦 Publish image to GHCR
+        if: ${{ github.ref == 'refs/heads/main' && github.event_name != 'pull_request' && github.repository_owner == github.actor && steps.task1.outcome == 'success' && steps.task2.outcome == 'success' }}
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -144,20 +156,32 @@ jobs:
           {
             echo "## 🛩️ UAV Assessment (C++)"
             echo
-            echo "- MAVROS smoke: **${{ steps.mavros.outcome }}**"
-            echo "- C++ E2E tests: **${{ steps.ctest.outcome }}**"
+            echo "- MAVROS smoke: **${{ steps.mavros_smoke.outcome }}**"
+            echo "- Task 1 (Arm/Disarm): **${{ steps.task1.outcome }}**"
+            echo "- Task 2 (Takeoff/Land): **${{ steps.task2.outcome }}**"
             echo
-            echo "<details><summary>🧾 MAVROS log (tail)</summary>"
+            echo "<details><summary>🧾 MAVROS smoke – log tail</summary>"
             echo
             echo '```text'
-            [ -f .ci_artifacts/mavros.log ] && tail -n 80 .ci_artifacts/mavros.log || echo "(no mavros.log)"
+            [ -f .ci_artifacts/smoke_mavros.log ] && tail -n 80 .ci_artifacts/smoke_mavros.log || echo "(no smoke_mavros.log)"
             echo '```'
             echo "</details>"
             echo
-            echo "<details><summary>📄 SITL (E2E) log (tail)</summary>"
+            echo "<details><summary>📄 Task 1 – SITL/MAVROS log tail</summary>"
             echo
             echo '```text'
-            [ -f .ci_artifacts/sitl_e2e.log ] && tail -n 120 .ci_artifacts/sitl_e2e.log || echo "(no sitl_e2e.log)"
+            [ -f .ci_artifacts/task1_sitl.log ] && tail -n 100 .ci_artifacts/task1_sitl.log || echo "(no task1_sitl.log)"
+            echo
+            [ -f .ci_artifacts/task1_mavros.log ] && tail -n 80 .ci_artifacts/task1_mavros.log || echo "(no task1_mavros.log)"
+            echo '```'
+            echo "</details>"
+            echo
+            echo "<details><summary>📄 Task 2 – SITL/MAVROS log tail</summary>"
+            echo
+            echo '```text'
+            [ -f .ci_artifacts/task2_sitl.log ] && tail -n 100 .ci_artifacts/task2_sitl.log || echo "(no task2_sitl.log)"
+            echo
+            [ -f .ci_artifacts/task2_mavros.log ] && tail -n 80 .ci_artifacts/task2_mavros.log || echo "(no task2_mavros.log)"
             echo '```'
             echo "</details>"
             echo
@@ -169,6 +193,6 @@ jobs:
             echo '```'
           } >> "$GITHUB_STEP_SUMMARY"
 
-      - name: ❌ Fail job if any step failed
-        if: ${{ always() && (steps.mavros.outcome == 'failure' || steps.ctest.outcome == 'failure') }}
+      - name: ❌ Fail job if any failed
+        if: ${{ always() && (steps.mavros_smoke.outcome == 'failure' || steps.task1.outcome == 'failure' || steps.task2.outcome == 'failure') }}
         run: exit 1
