--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,9 @@ jobs:
       - name: 🧪 MAVROS smoke
         id: mavros_smoke
         shell: bash
-        continue-on-error: true
+        continue-on-error: true   # devam edelim
         run: |
+          set -o pipefail
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
             set -eo pipefail
             mkdir -p /ws/.ci_artifacts
@@ -70,22 +71,26 @@ jobs:
               sleep 0.5
             done
 
-            cp /tmp/sitl.log .ci_artifacts/smoke_sitl.log 2>/dev/null || true
+            cp /tmp/sitl.log  .ci_artifacts/smoke_sitl.log  2>/dev/null || true
             cp /tmp/mavros.log .ci_artifacts/smoke_mavros.log 2>/dev/null || true
 
-            test "$ok" -eq 1
+            exit $([ "$ok" -eq 1 ] && echo 0 || echo 1)
           '
+          rc=$?
+          echo "rc=${rc}" >> "$GITHUB_OUTPUT"
 
       # ---------------- C++ Build ----------------
       - name: 🧱 Build (colcon)
         id: build_cpp
         shell: bash
+        continue-on-error: true
         run: |
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
             set -eo pipefail
             source /opt/ros/humble/setup.bash
             colcon build --symlink-install --packages-up-to uav_tests_cpp
           '
+          echo "rc=$?" >> "$GITHUB_OUTPUT"
 
       # ---------------- Task1 Test ----------------
       - name: ▶️ Task 1 – Arm/Disarm
@@ -93,16 +98,22 @@ jobs:
         shell: bash
         continue-on-error: true
         run: |
+          set -o pipefail
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
             set -eo pipefail
             source /opt/ros/humble/setup.bash
             source install/setup.bash
+
+            # Sadece E2E wrapper testini koştur
             colcon test --packages-select uav_tests_cpp --ctest-args -R "^task1_arm_disarm$" -VV || true
             colcon test-result --all --verbose || true
+
             mkdir -p .ci_artifacts
-            cp /tmp/sitl_e2e.log .ci_artifacts/task1_sitl.log 2>/dev/null || true
+            cp /tmp/sitl_e2e.log   .ci_artifacts/task1_sitl.log   2>/dev/null || true
             cp /tmp/mavros_e2e.log .ci_artifacts/task1_mavros.log 2>/dev/null || true
           '
+          rc=$?
+          echo "rc=${rc}" >> "$GITHUB_OUTPUT"
 
       # ---------------- Task2 Test ----------------
       - name: ▶️ Task 2 – Takeoff/Land
@@ -110,16 +121,21 @@ jobs:
         shell: bash
         continue-on-error: true
         run: |
+          set -o pipefail
           docker run --rm -t -v "$PWD":/ws -w /ws ${{ env.LOCAL_IMAGE }} bash -lc '
             set -eo pipefail
             source /opt/ros/humble/setup.bash
             source install/setup.bash
+
             colcon test --packages-select uav_tests_cpp --ctest-args -R "^task2_takeoff_land$" -VV || true
             colcon test-result --all --verbose || true
+
             mkdir -p .ci_artifacts
-            cp /tmp/sitl_e2e.log .ci_artifacts/task2_sitl.log 2>/dev/null || true
+            cp /tmp/sitl_e2e.log   .ci_artifacts/task2_sitl.log   2>/dev/null || true
             cp /tmp/mavros_e2e.log .ci_artifacts/task2_mavros.log 2>/dev/null || true
           '
+          rc=$?
+          echo "rc=${rc}" >> "$GITHUB_OUTPUT"
 
       - name: 📎 Upload artifacts
         if: always()
@@ -128,25 +144,48 @@ jobs:
           name: ci-artifacts
           path: .ci_artifacts
 
-      # ---- Summary (colored text) ----
+      # ---- GHCR Publish (push even if tests fail; only if not PR & you own the repo) ----
+      - name: 🔐 Login to GHCR
+        if: ${{ github.event_name != 'pull_request' && github.repository_owner == github.actor }}
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📦 Publish image to GHCR
+        if: ${{ github.event_name != 'pull_request' && github.repository_owner == github.actor }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{ env.GHCR_IMAGE }}:latest
+            ${{ env.GHCR_IMAGE }}:${{ github.sha }}
+          builder: ${{ steps.buildx.outputs.name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # ---- Summary (colored badges) ----
       - name: 📝 Summary
         if: always()
         shell: bash
         run: |
-          status_color() {
-            if [ "$1" = "success" ]; then
-              echo "<span style='color:green'><b>SUCCESS</b></span>"
+          badge () {
+            # $1: label  $2: rc (0/!=0)
+            if [ "$2" -eq 0 ]; then
+              echo "![${1}](https://img.shields.io/badge/${1// /%20}-SUCCESS-brightgreen)"
             else
-              echo "<span style='color:red'><b>FAILURE</b></span>"
+              echo "![${1}](https://img.shields.io/badge/${1// /%20}-FAILURE-red)"
             fi
           }
-
           {
             echo "## 🛩️ UAV Assessment (C++)"
             echo
-            echo "- MAVROS smoke: $(status_color '${{ steps.mavros_smoke.outcome }}')"
-            echo "- Task 1 (Arm/Disarm): $(status_color '${{ steps.task1.outcome }}')"
-            echo "- Task 2 (Takeoff/Land): $(status_color '${{ steps.task2.outcome }}')"
+            echo "$(badge "MAVROS smoke"  ${{ steps.mavros_smoke.outputs.rc || 1 }})"
+            echo "$(badge "Task 1"        ${{ steps.task1.outputs.rc || 1 }})"
+            echo "$(badge "Task 2"        ${{ steps.task2.outputs.rc || 1 }})"
             echo
             echo "<details><summary>🧾 MAVROS smoke – log tail</summary>"
             echo
@@ -158,18 +197,23 @@ jobs:
             echo "<details><summary>📄 Task 1 – SITL/MAVROS log tail</summary>"
             echo
             echo '```text'
-            [ -f .ci_artifacts/task1_sitl.log ] && tail -n 100 .ci_artifacts/task1_sitl.log || echo "(no task1_sitl.log)"
-            echo
-            [ -f .ci_artifacts/task1_mavros.log ] && tail -n 80 .ci_artifacts/task1_mavros.log || echo "(no task1_mavros.log)"
+            [ -f .ci_artifacts/task1_sitl.log ]   && tail -n 100 .ci_artifacts/task1_sitl.log   || echo "(no task1_sitl.log)"
+            [ -f .ci_artifacts/task1_mavros.log ] && tail -n  80 .ci_artifacts/task1_mavros.log || echo "(no task1_mavros.log)"
             echo '```'
             echo "</details>"
             echo
             echo "<details><summary>📄 Task 2 – SITL/MAVROS log tail</summary>"
             echo
             echo '```text'
-            [ -f .ci_artifacts/task2_sitl.log ] && tail -n 100 .ci_artifacts/task2_sitl.log || echo "(no task2_sitl.log)"
-            echo
-            [ -f .ci_artifacts/task2_mavros.log ] && tail -n 80 .ci_artifacts/task2_mavros.log || echo "(no task2_mavros.log)"
+            [ -f .ci_artifacts/task2_sitl.log ]   && tail -n 100 .ci_artifacts/task2_sitl.log   || echo "(no task2_sitl.log)"
+            [ -f .ci_artifacts/task2_mavros.log ] && tail -n  80 .ci_artifacts/task2_mavros.log || echo "(no task2_mavros.log)"
             echo '```'
             echo "</details>"
+            echo
+            echo "### 🐋 Docker (GHCR)"
+            echo '```bash'
+            echo "docker pull ${{ env.GHCR_IMAGE }}:latest"
+            echo "docker pull ${{ env.GHCR_IMAGE }}:${{ github.sha }}"
+            echo "docker run -it --rm ${{ env.GHCR_IMAGE }}:latest bash"
+            echo '```'
           } >> "$GITHUB_STEP_SUMMARY"
